includes = include_directories('.')

lib_autori = library('autori',
    sources: 'autori.c')

dep_autori = declare_dependency(
    link_with: lib_autori,
    include_directories: includes)

lib_batter_up = library('batter_up',
    sources: 'batter_up.c',
    dependencies: dep_m)

dep_batter_up = declare_dependency(
    link_with: lib_batter_up,
    include_directories: includes)

lib_bijele = library('bijele',
    sources: 'bijele.c')

dep_bijele = declare_dependency(
    link_with: lib_bijele,
    include_directories: includes)

lib_cold_puter_science = library('cold_puter_science',
    sources: 'cold_puter_science.c')

dep_cold_puter_science = declare_dependency(
    link_with: lib_cold_puter_science,
    include_directories: includes)

lib_death_knight_hero = library('death_knight_hero',
    sources: 'death_knight_hero.c')

dep_death_knight_hero = declare_dependency(
    link_with: lib_death_knight_hero,
    include_directories: includes)

lib_faktor = library('faktor',
    sources: 'faktor.c')

dep_faktor = declare_dependency(
    link_with: lib_faktor,
    include_directories: includes)

lib_fizzbuzz = library('fizzbuzz',
    sources: 'fizzbuzz.c')

dep_fizzbuzz = declare_dependency(
    link_with: lib_fizzbuzz,
    include_directories: includes)

lib_ladder = library('ladder',
    sources: 'ladder.c',
    dependencies: dep_m)

dep_ladder = declare_dependency(
    link_with: lib_ladder,
    include_directories: includes)

lib_modulo = library('modulo',
    sources: 'modulo.c')

dep_modulo = declare_dependency(
    link_with: lib_modulo,
    include_directories: includes)

lib_nasty_hacks = library('nasty_hacks',
    sources: 'nasty_hacks.c')

dep_nasty_hacks = declare_dependency(
    link_with: lib_nasty_hacks,
    include_directories: includes)

lib_herman = library('herman',
    sources: 'herman.c',
    dependencies: dep_m)

dep_herman = declare_dependency(
    link_with: lib_herman,
    include_directories: includes)

lib_number_fun = library('number_fun',
    sources: 'number_fun.c')

dep_number_fun = declare_dependency(
    link_with: lib_number_fun,
    include_directories: includes)

lib_oddities = library('oddities',
    sources: 'oddities.c')

dep_oddities = declare_dependency(
    link_with: lib_oddities,
    include_directories: includes)

lib_planina = library('planina',
    sources: 'planina.c',
    dependencies: dep_m)

dep_planina = declare_dependency(
    link_with: lib_planina,
    include_directories: includes)

lib_pot = library('pot',
    sources: 'pot.c',
    dependencies: dep_m)

dep_pot = declare_dependency(
    link_with: lib_pot,
    include_directories: includes)

lib_quadrant_selection = library('quadrant_selection',
    sources: 'quadrant_selection.c',
    dependencies: dep_m)

dep_quadrant_selection = declare_dependency(
    link_with: lib_quadrant_selection,
    include_directories: includes)

lib_r2 = library('r2',
    sources: 'r2.c')

dep_r2 = declare_dependency(
    link_with: lib_r2,
    include_directories: includes)

lib_quick_brown_fox = library('quick_brown_fox',
    sources: 'quick_brown_fox.c')

dep_quick_brown_fox = declare_dependency(
    link_with: lib_quick_brown_fox,
    include_directories: includes)

lib_reversed_binary_numbers = library('reversed_binary_numbers',
    sources: 'reversed_binary_numbers.c',
    dependencies: dep_m)

dep_reversed_binary_numbers = declare_dependency(
    link_with: lib_reversed_binary_numbers,
    include_directories: includes)

lib_stuck_in_a_time_loop = library('stuck_in_a_time_loop',
    sources: 'stuck_in_a_time_loop.c')

dep_stuck_in_a_time_loop = declare_dependency(
    link_with: lib_stuck_in_a_time_loop,
    include_directories: includes)

lib_take_two_stones = library('take_two_stones',
    sources: 'take_two_stones.c')

dep_take_two_stones = declare_dependency(
    link_with: lib_take_two_stones,
    include_directories: includes)

lib_tarifa = library('tarifa',
    sources: 'tarifa.c')

dep_tarifa = declare_dependency(
    link_with: lib_tarifa,
    include_directories: includes)

lib_to_lower = library('to_lower',
    sources: 'to_lower.c')

dep_to_lower = declare_dependency(
    link_with: lib_to_lower,
    include_directories: includes)

lib_trik = library('trik',
    sources: 'trik.c')

dep_trik = declare_dependency(
    link_with: lib_trik,
    include_directories: includes)

lib_zamka = library('zamka',
    sources: 'zamka.c',
    dependencies: dep_m)

dep_zamka = declare_dependency(
    link_with: lib_zamka,
    include_directories: includes)
