includes = include_directories('.')

lib_perang_dunia_ketiga = library('perang_dunia_ketiga',
    sources: 'perang_dunia_ketiga.c')

dep_perang_dunia_ketiga = declare_dependency(
    link_with: lib_perang_dunia_ketiga,
    include_directories: includes)

lib_restoran_chanek = library('restoran_chanek',
    sources: 'restoran_chanek.c')

dep_restoran_chanek = declare_dependency(
    link_with: lib_restoran_chanek,
    include_directories: includes)
