test_report_repair = executable('report_repair_test',
    sources: 'report_repair_test.c',
    dependencies: [dep_cmocka, dep_report_repair])

test('advent_of_code report_repair', test_report_repair)

test_not_quite_lisp = executable('not_quite_lisp_test',
    sources: 'not_quite_lisp_test.c',
    dependencies: [dep_cmocka, dep_not_quite_lisp])

test('advent_of_code not_quite_lisp', test_not_quite_lisp)
