test_report_repair = executable('report_repair_test',
    sources: 'report_repair_test.c',
    dependencies: [dep_cmocka, dep_report_repair])

test('advent_of_code report_repair', test_report_repair)

test_rocket_equation = executable('rocket_equation_test',
    sources: 'rocket_equation_test.c',
    dependencies: [dep_cmocka, dep_rocket_equation])

test('advent_of_code rocket_equation', test_rocket_equation)

test_not_quite_lisp = executable('not_quite_lisp_test',
    sources: 'not_quite_lisp_test.c',
    dependencies: [dep_cmocka, dep_not_quite_lisp])

test('advent_of_code not_quite_lisp', test_not_quite_lisp)

test_there_would_be_no_math = executable('there_would_be_no_math_test',
    sources: 'there_would_be_no_math_test.c',
    dependencies: [dep_cmocka, dep_there_would_be_no_math])

test('advent_of_code there_would_be_no_math', test_there_would_be_no_math)
