test_reverse_list_recursively = executable('reverse_list_recursively_test',
    sources: 'reverse_list_recursively_test.c',
    dependencies: [dep_cmocka, dep_reverse_list_recursively])

test('codewars reverse_list_recursively', test_reverse_list_recursively)

test_string_repeat = executable('string_repeat_test',
    sources: 'string_repeat_test.c',
    dependencies: [dep_cmocka, dep_string_repeat])

test('codewars string_repeat', test_string_repeat)
