test_alternate_case = executable('alternate_case_test',
    sources: 'alternate_case_test.c',
    dependencies: [dep_cmocka, dep_alternate_case])

test('codewars alternate_case', test_alternate_case)

test_n_th_power = executable('n-th_power_test',
    sources: 'n-th_power_test.c',
    dependencies: [dep_cmocka, dep_n_th_power])

test('codewars n-th_power', test_n_th_power)

test_ones_and_zeros = executable('ones_and_zeros_test',
    sources: 'ones_and_zeros_test.c',
    dependencies: [dep_cmocka, dep_ones_and_zeros])

test('codewars ones_and_zeros', test_ones_and_zeros)

test_reverse_list_recursively = executable('reverse_list_recursively_test',
    sources: 'reverse_list_recursively_test.c',
    dependencies: [dep_cmocka, dep_reverse_list_recursively])

test('codewars reverse_list_recursively', test_reverse_list_recursively)

test_string_repeat = executable('string_repeat_test',
    sources: 'string_repeat_test.c',
    dependencies: [dep_cmocka, dep_string_repeat])

test('codewars string_repeat', test_string_repeat)

test_who_likes_it = executable('who_likes_it_test',
    sources: 'who_likes_it_test.c',
    dependencies: [dep_cmocka, dep_who_likes_it])

test('codewars who_likes_it', test_who_likes_it)
