test_alternate_case = executable('alternate_case_test',
    sources: 'alternate_case_test.c',
    dependencies: [dep_cmocka, dep_alternate_case])

test('codewars alternate_case', test_alternate_case)

test_consecutive_strings = executable('consecutive_strings_test',
    sources: 'consecutive_strings_test.c',
    dependencies: [dep_cmocka, dep_consecutive_strings])

test('codewars consecutive_strings', test_consecutive_strings)

test_how_much = executable('how_much_test',
    sources: 'how_much_test.c',
    dependencies: [dep_cmocka, dep_how_much])

test('codewars how_much', test_how_much)

test_n_th_power = executable('n-th_power_test',
    sources: 'n-th_power_test.c',
    dependencies: [dep_cmocka, dep_n_th_power])

test('codewars n-th_power', test_n_th_power)

test_ones_and_zeros = executable('ones_and_zeros_test',
    sources: 'ones_and_zeros_test.c',
    dependencies: [dep_cmocka, dep_ones_and_zeros])

test('codewars ones_and_zeros', test_ones_and_zeros)

test_reverse_list_recursively = executable('reverse_list_recursively_test',
    sources: 'reverse_list_recursively_test.c',
    dependencies: [dep_cmocka, dep_reverse_list_recursively])

test('codewars reverse_list_recursively', test_reverse_list_recursively)

test_sorted_yes_no_how = executable('sorted_yes_no_how_test',
    sources: 'sorted_yes_no_how_test.c',
    dependencies: [dep_cmocka, dep_sorted_yes_no_how])

test('codewars sorted_yes_no_how', test_sorted_yes_no_how)

test_string_repeat = executable('string_repeat_test',
    sources: 'string_repeat_test.c',
    dependencies: [dep_cmocka, dep_string_repeat])

test('codewars string_repeat', test_string_repeat)

test_who_likes_it = executable('who_likes_it_test',
    sources: 'who_likes_it_test.c',
    dependencies: [dep_cmocka, dep_who_likes_it])

test('codewars who_likes_it', test_who_likes_it)
