test_counting_valleys = executable('counting_valleys_test',
    sources: 'counting_valleys_test.c',
    dependencies: [dep_cmocka, dep_counting_valleys])

test('hacker_rank counting_valleys', test_counting_valleys)

test_prime_or_not = executable('prime_or_not_test',
    sources: 'prime_or_not_test.c',
    dependencies: [dep_cmocka, dep_prime_or_not])

test('hacker_rank prime_or_not', test_prime_or_not)
