test_add_two_numbers = executable('add_two_numbers_test',
    sources: 'add_two_numbers_test.c',
    dependencies: [dep_cmocka, dep_add_two_numbers])

test('leetcode add_two_numbers', test_add_two_numbers)

test_longest_substring = executable('longest_substring_test',
    sources: 'longest_substring_test.c',
    dependencies: [dep_cmocka, dep_longest_substring])

test('leetcode longest_substring', test_longest_substring)

test_reverse_integer = executable('reverse_integer_test',
    sources: 'reverse_integer_test.c',
    dependencies: [dep_cmocka, dep_reverse_integer])

test('leetcode reverse_integer', test_reverse_integer)

test_string_to_integer = executable('string_to_integer_test',
    sources: 'string_to_integer_test.c',
    dependencies: [dep_cmocka, dep_string_to_integer])

test('leetcode string_to_integer', test_string_to_integer)
