test_autori = executable('autori_test',
    sources: 'autori-test.c',
    dependencies: [dep_cmocka, dep_autori])

test('open_kattis autori', test_autori)

test_batter_up = executable('batter_up_test',
    sources: 'batter_up-test.c',
    dependencies: [dep_cmocka, dep_batter_up])

test('open_kattis batter_up', test_batter_up)

test_fizzbuzz = executable('fizzbuzz_test',
    sources: 'fizzbuzz-test.c',
    dependencies: [dep_cmocka, dep_fizzbuzz])

test('open_kattis fizzbuzz', test_fizzbuzz)

test_herman = executable('herman_test',
    sources: 'herman-test.c',
    dependencies: [dep_cmocka, dep_herman])

test('open_kattis herman', test_herman)

test_planina = executable('planina_test',
    sources: 'planina-test.c',
    dependencies: [dep_cmocka, dep_planina])

test('open_kattis planina', test_planina)

test_pot = executable('pot_test',
    sources: 'pot-test.c',
    dependencies: [dep_cmocka, dep_pot])

test('open_kattis pot', test_pot)

test_reversed_binary_numbers = executable('reversed_binary_numbers_test',
    sources: 'reversed_binary_numbers-test.c',
    dependencies: [dep_cmocka, dep_reversed_binary_numbers])

test('open_kattis reversed_binary_numbers', test_reversed_binary_numbers)

test_take_two_stones = executable('take_two_stones_test',
    sources: 'take_two_stones-test.c',
    dependencies: [dep_cmocka, dep_take_two_stones])

test('open_kattis take_two_stones', test_take_two_stones)

test_to_lower = executable('to_lower_test',
    sources: 'to_lower-test.c',
    dependencies: [dep_cmocka, dep_to_lower])

test('open_kattis to_lower', test_to_lower)
