test_autori = executable('autori_test',
    sources: 'autori-test.c',
    dependencies: [dep_cmocka, dep_autori])

test('open_kattis autori', test_autori)

test_batter_up = executable('batter_up_test',
    sources: 'batter_up-test.c',
    dependencies: [dep_cmocka, dep_batter_up])

test('open_kattis batter_up', test_batter_up)

test_death_knight_hero = executable('death_knight_hero_test',
    sources: 'death_knight_hero-test.c',
    dependencies: [dep_cmocka, dep_death_knight_hero])

test('open_kattis death_knight_hero', test_death_knight_hero)

test_faktor = executable('faktor_test',
    sources: 'faktor-test.c',
    dependencies: [dep_cmocka, dep_faktor])

test('open_kattis faktor', test_faktor)

test_fizzbuzz = executable('fizzbuzz_test',
    sources: 'fizzbuzz-test.c',
    dependencies: [dep_cmocka, dep_fizzbuzz])

test('open_kattis fizzbuzz', test_fizzbuzz)

test_ladder = executable('ladder_test',
    sources: 'ladder-test.c',
    dependencies: [dep_cmocka, dep_ladder])

test('open_kattis ladder', test_ladder)

test_modulo = executable('modulo_test',
    sources: 'modulo-test.c',
    dependencies: [dep_cmocka, dep_modulo])

test('open_kattis modulo', test_modulo)

test_nasty_hacks = executable('nasty_hacks_test',
    sources: 'nasty_hacks-test.c',
    dependencies: [dep_cmocka, dep_nasty_hacks])

test('open_kattis nasty_hacks', test_nasty_hacks)

test_herman = executable('herman_test',
    sources: 'herman-test.c',
    dependencies: [dep_cmocka, dep_herman])

test('open_kattis herman', test_herman)

test_oddities = executable('oddities_test',
    sources: 'oddities-test.c',
    dependencies: [dep_cmocka, dep_oddities])

test('open_kattis oddities', test_oddities)

test_planina = executable('planina_test',
    sources: 'planina-test.c',
    dependencies: [dep_cmocka, dep_planina])

test('open_kattis planina', test_planina)

test_pot = executable('pot_test',
    sources: 'pot-test.c',
    dependencies: [dep_cmocka, dep_pot])

test('open_kattis pot', test_pot)

test_quadrant_selection = executable('quadrant_selection_test',
    sources: 'quadrant_selection-test.c',
    dependencies: [dep_cmocka, dep_quadrant_selection])

test('open_kattis quadrant_selection', test_quadrant_selection)

test_r2 = executable('r2_test',
    sources: 'r2-test.c',
    dependencies: [dep_cmocka, dep_r2])

test('open_kattis r2', test_r2)

test_quick_brown_fox = executable('quick_brown_fox_test',
    sources: 'quick_brown_fox-test.c',
    dependencies: [dep_cmocka, dep_quick_brown_fox])

test('open_kattis quick_brown_fox', test_quick_brown_fox)

test_reversed_binary_numbers = executable('reversed_binary_numbers_test',
    sources: 'reversed_binary_numbers-test.c',
    dependencies: [dep_cmocka, dep_reversed_binary_numbers])

test('open_kattis reversed_binary_numbers', test_reversed_binary_numbers)

test_stuck_in_a_time_loop = executable('stuck_in_a_time_loop_test',
    sources: 'stuck_in_a_time_loop-test.c',
    dependencies: [dep_cmocka, dep_stuck_in_a_time_loop])

test('open_kattis stuck_in_a_time_loop', test_stuck_in_a_time_loop)

test_take_two_stones = executable('take_two_stones_test',
    sources: 'take_two_stones-test.c',
    dependencies: [dep_cmocka, dep_take_two_stones])

test('open_kattis take_two_stones', test_take_two_stones)

test_tarifa = executable('tarifa_test',
    sources: 'tarifa-test.c',
    dependencies: [dep_cmocka, dep_tarifa])

test('open_kattis tarifa', test_tarifa)

test_to_lower = executable('to_lower_test',
    sources: 'to_lower-test.c',
    dependencies: [dep_cmocka, dep_to_lower])

test('open_kattis to_lower', test_to_lower)

test_trik = executable('trik_test',
    sources: 'trik-test.c',
    dependencies: [dep_cmocka, dep_trik])

test('open_kattis trik', test_trik)

test_zamka = executable('zamka_test',
    sources: 'zamka-test.c',
    dependencies: [dep_cmocka, dep_zamka])

test('open_kattis zamka', test_zamka)
