test_perang_dunia_ketiga = executable('perang_dunia_ketiga_test',
    sources: 'perang_dunia_ketiga_test.c',
    dependencies: [dep_cmocka, dep_perang_dunia_ketiga])

test('tlx_toki perang_dunia_ketiga', test_perang_dunia_ketiga)

test_restoran_chanek = executable('restoran_chanek_test',
    sources: 'restoran_chanek_test.c',
    dependencies: [dep_cmocka, dep_restoran_chanek])

test('tlx_toki restoran_chanek', test_restoran_chanek)
